src/snapshot/tests/snapshots/librojo__snapshot__tests__apply__add_property-2.snap
---
source: src/snapshot/tests/apply.rs
expression: applied_patch_value
---
client_id: ~
removed: []
added: []
updated:
  - id: id-1
    changed_name: ~
    changed_class_name: ~
    changed_properties:
      Foo:
        String: Value of Foo
    changed_metadata: ~

