src/snapshot/tests/snapshots/librojo__snapshot__tests__apply__remove_property_appied_patch.snap
---
source: src/snapshot/tests/apply.rs
expression: applied_patch_value

---
source: 00000000-0000-0000-0000-000000000000
removed: []
added: []
updated:
  - id: id-1
    changed_name: ~
    changed_class_name: ~
    changed_properties:
      Foo: ~
    changed_metadata: ~

