src/snapshot/tests/snapshots/librojo__snapshot__tests__apply__set_name_and_class_name-2.snap
---
source: src/snapshot/tests/apply.rs
expression: applied_patch_value

---
source: 00000000-0000-0000-0000-000000000000
removed: []
added: []
updated:
  - id: id-1
    changed_name: "Hello, world!"
    changed_class_name: Folder
    changed_properties: {}
    changed_metadata: ~

